chore: dialog and nanostore setup for project card

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -1,9 +1,8 @@
 ---
 import { Image } from "astro:assets";
 import type { HTMLAttributes } from "astro/types";
-import { GithubIcon, VercelIcon } from "./svg/SocialIcons";
+import { GithubIcon } from "./svg/SocialIcons";
 import { Globe } from "lucide-react";
-import Dialog from "./react-components/Dialog";
 
 type Props = {
   cardId: number;
@@ -22,6 +21,8 @@ const {
   ...props
 } = Astro.props;
 ---
+
+<script></script>
 
 <div
   class:list={[
