--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -30,16 +30,17 @@ const {
 
 <div
   class:list={[
-    "size-full flex flex-col justify-around  p-4 shadow-elevate-light backdrop-blur dark:shadow-elevate-dark",
+    "size-full flex flex-col justify-around  p-4 shadow-elevate-light backdrop-blur dark:shadow-elevate-dark text-foreground",
     { "gap-2": showDetails },
     className,
     classList,
   ]}
   {...props}
 >
+  <slot />
   <Image
     class:list={[
-      "rounded-lg size-full object-cover aspect-video object-center ",
+      "size-full rounded-lg object-cover aspect-video object-center",
       { "md:w-[85%]": showDetails },
     ]}
     src={profileImg}
