style: project page

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -10,7 +10,7 @@ interface Props {
 const { title } = Astro.props;
 ---
 
-<!doctype html>
+<!-- TODO: - [] update read me--><!doctype html>
 <html lang="en">
   <head>
     <meta name="view-transition" content="same-origin" />
