--- a/src/pages/projects/index.astro
+++ b/src/pages/projects/index.astro
@@ -20,20 +20,16 @@ const project = await getAllProjects();
 
       projectDiv.addEventListener("click", (event) => {
         const target = event.target;
+
         if (target instanceof Element) {
           const openButton = target.closest(".open-dialog");
           if (openButton) {
-            const dialog = openButton.nextElementSibling as HTMLDialogElement;
+            const dialog = openButton.previousElementSibling as HTMLDialogElement;
             const dialogId = dialog.id;
 
             if (dialog && dialog.tagName === "DIALOG") {
-              history.pushState(null, "", `/projects/${dialogId}`);
-
-              const rect = openButton.getBoundingClientRect();
-              dialog.style.setProperty("--click-x", `${rect.left}px`);
-              dialog.style.setProperty("--click-y", `${rect.top}px`);
-
               dialog.showModal();
+              history.pushState(null, "", `/projects/${dialogId}`);
             }
           }
 
@@ -46,8 +42,6 @@ const project = await getAllProjects();
             target.closest("dialog")?.close();
             history.back();
           }
-          console.log(target.clientTop, "y");
-          console.log(target.clientLeft, "x");
         }
       });
     }
@@ -60,43 +54,45 @@ const project = await getAllProjects();
     id="project-section"
   >
     {
-      project.map(({ name, description, liveUrl, repoUrl, imageUrl, imageKey }) => (
-        <div
-          class:list={[
-            "rounded-md after:rounded-md relative bg-fixed after:hover:bg-foreground/50 after:hover:mix-blend-multiply after:shadow-elevate-light after:dark:shadow-elevate-dark bg-radial hover:backdrop-grayscale",
-          ]}
-        >
-          <button class="btn-animate open-dialog size-full ">
-            <ProjectCard
-              description={description}
-              repoUrl={repoUrl}
-              siteUrl={liveUrl}
-              projectName={name}
-              profileImg={imageUrl}
-              cardId={imageKey}
-              class:list="  bg-radial-front hover:filter rounded-md bg-background bg-fixed shadow-none dark:shadow-none"
-            />
-          </button>
-          <dialog
-            id={imageKey}
-            class=" dialog-animate mx-auto max-w-3xl gap-4 rounded-md shadow-elevate-light backdrop:bg-background/15 backdrop:backdrop-blur-sm dark:shadow-elevate-dark"
+      [...project, ...project, ...project].map(
+        ({ name, description, liveUrl, repoUrl, imageUrl, imageKey }) => (
+          <div
+            class:list={[
+              "rounded-md after:rounded-md relative bg-fixed   after:shadow-elevate-light after:dark:shadow-elevate-dark bg-radial hover:backdrop-grayscale",
+            ]}
           >
-            <ProjectCard
-              description={description}
-              repoUrl={repoUrl}
-              siteUrl={liveUrl}
-              projectName={name}
-              profileImg={imageUrl}
-              cardId={imageKey}
-              class:list=" rounded-md bg-background bg-fixed shadow-none dark:shadow-none  gap-2"
+            <dialog
+              id={imageKey}
+              class="dialog-animate  peer mx-auto  max-w-3xl gap-4 rounded-md shadow-elevate-light backdrop:bg-background/15 backdrop:backdrop-blur-sm  dark:shadow-elevate-dark"
             >
-              <button id={imageKey} class="close-dialog self-start">
-                &larr; go back
-              </button>
-            </ProjectCard>
-          </dialog>
-        </div>
-      ))
+              <ProjectCard
+                description={description}
+                repoUrl={repoUrl}
+                siteUrl={liveUrl}
+                projectName={name}
+                profileImg={imageUrl}
+                cardId={imageKey}
+                class:list=" rounded-md bg-background bg-fixed shadow-none dark:shadow-none  gap-2"
+              >
+                <button id={imageKey} class="close-dialog self-start">
+                  &larr; go back
+                </button>
+              </ProjectCard>
+            </dialog>
+            <button class=" btn-animate open-dialog size-full [transition-behavior:allow-discrete] active:scale-[.8] active:transition-transform ">
+              <ProjectCard
+                description={description}
+                repoUrl={repoUrl}
+                siteUrl={liveUrl}
+                projectName={name}
+                profileImg={imageUrl}
+                cardId={imageKey}
+                class:list=" bg-radial-front rounded-md bg-background bg-fixed shadow-none dark:shadow-none"
+              />
+            </button>
+          </div>
+        )
+      )
     }
   </section>
 </Layout>
@@ -126,14 +122,24 @@ const project = await getAllProjects();
     initial-value: 50%;
   }
 
+  .bg-radial:hover::after {
+    background-color: hsl(var(--foreground));
+  }
+
+  dialog[open] + .btn-animate {
+    display: none;
+  }
+
   @media (hover: hover) {
     .dialog-animate {
-      transition-property: translate scale;
-      transition-duration: 0.5s;
+      transition-property: opacity scale;
+      transition-duration: 0.3s;
       transition-timing-function: ease-in-out;
+      scale: 1;
+      opacity: 1;
       @starting-style {
-        translate: calc(var(--click-x) - 50%) calc(var(--click-y) - 50%);
-        scale: 0.5;
+        scale: 0.8;
+        opacity: 0.8;
       }
     }
 
@@ -158,6 +164,15 @@ const project = await getAllProjects();
       pointer-events: none;
       z-index: -1;
     }
+  }
+
+  .bg-radial::before {
+    content: "";
+    position: absolute;
+    inset: 0;
+    background-attachment: fixed;
+    background-color: hsl(var(--background));
+    pointer-events: none;
   }
 
   @media (hover: none) {
