--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -59,7 +59,7 @@ const project = [
 
 <Layout title="HomePage">
   <section class="flex size-full flex-col items-center justify-between gap-4 text-clip">
-    <article class="w-fit grow gap-4 p-6 sm:grid sm:justify-center sm:gap-x-4 xl:gap-x-8">
+    <article class="w-fit grow gap-4 p-6 sm:grid sm:justify-center sm:gap-x-4 xl:gap-x-8 xl:p-2">
       <h1 class="text-3xl sm:col-start-2 sm:self-end
             sm:justify-self-start md:text-4xl">
         Hi, I am <strong class="block">Churchill Jay Sungcados</strong>
@@ -77,19 +77,25 @@ const project = [
         class="sm:relative sm:z-10 sm:col-start-1 sm:row-start-1 sm:row-end-3 sm:w-11/12 sm:justify-self-end md:z-0 md:w-5/6"
       />
     </article>
-    <aside class="grid max-w-xl place-items-center md:w-4/5 2xl:w-full">
+    <aside class="grid max-w-xl place-items-center px-4 md:w-4/5 2xl:w-full">
       <div
         class="group w-[110%] overflow-hidden backdrop-blur-lg sm:w-[125%] md:w-[130%] md:overflow-visible lg:w-[140%]"
       >
         <button
           id="go-prev"
-          class="absolute left-0 z-10 hidden h-full w-fit border p-1 backdrop-blur-md active:scale-95 group-hover:block group-focus-visible:block hocus-visible:outline hocus-visible:outline-1 md:p-2 lg:p-4"
+          class:list={[
+            "absolute left-0 top-1/2 z-10 h-1/4 w-fit -translate-y-1/2 border p-1 backdrop-blur-md active:scale-95 md:p-2 lg:p-4",
+            "group-hover:block group-focus-visible:block hocus-visible:outline hocus-visible:outline-1 hoverable:hidden ",
+          ]}
           data-length={project.length}
           ><CircleChevronLeft className=" hocus-visible:scale-110 md:size-8" /></button
         >
         <button
           id="go-next"
-          class="absolute right-0 z-10 hidden h-full w-fit border p-1 backdrop-blur-md active:scale-95 group-hover:block group-focus-visible:block hocus-visible:outline hocus-visible:outline-1 md:p-2 lg:p-4"
+          class:list={[
+            "absolute right-0 top-1/2 z-10 h-1/4 w-fit -translate-y-1/2 border p-1 backdrop-blur-md active:scale-95 md:p-2 lg:p-4",
+            "group-hover:block group-focus-visible:block hocus-visible:outline hocus-visible:outline-1 hoverable:hidden",
+          ]}
           data-length={project.length}
           ><CircleChevronRight className="hocus-visible:scale-110 md:size-8" /></button
         >
@@ -107,7 +113,7 @@ const project = [
                 description={value.description}
                 profileImg={value.profileImg}
                 class:list={[
-                  "relative custom-item  bg-background [grid-area:1/1] [backface-visibility:hidden] md:[backface-visibility:visible] ",
+                  "relative custom-item bg-background [grid-area:1/1] [backface-visibility:hidden] md:[backface-visibility:visible] ",
                 ]}
                 style={`--position:${index + 1}`}
               />
