--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props;
     <meta name="generator" content={Astro.generator} />
     <title>{title}</title>
   </head>
-  <body class="dark">
+  <body class="">
     <div class="relative grid min-h-dvh grid-rows-[auto_1fr_auto]">
       <Header />
       <main class="p-4">
