chore: setup select component for a customized select
chore: select component

style select page

--- a/src/components/ProjectCard.astro
+++ b/src/components/ProjectCard.astro
@@ -4,6 +4,8 @@ import type { HTMLAttributes } from "astro/types";
 import { GithubIcon } from "./svg/SocialIcons";
 import { Globe } from "lucide-react";
 import {
+  DrizzleIcon,
+  AstroIcon,
   HTML5,
   JavaScript,
   TailwindCSS,
@@ -107,6 +109,12 @@ const {
         </a>
         <a href="#">
           <ReactIcon />
+        </a>
+        <a href="#">
+          <AstroIcon />
+        </a>
+        <a href="#">
+          <DrizzleIcon />
         </a>
       </div>
     </div>
